--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,9 +8,18 @@ FONT SIZE SYSTEM (px)
 
 
 - Font Weights
+Default:400
+500
+600
+Bold: 700
+
+
+
 Default: 400
 - Line heights
 Default: 1
+small: 1.05
+paragraph: 1.6
 
 -- 02 COLORS
 Primary Color: #e67e22
@@ -27,6 +36,7 @@ Greys: #555
 -- 05 SHADOWS 
 
 -- 06 BORDER RADIUS
+Default: 9px
 
 -- 07 WHITE SPACE
 Spacing Sysytem(px)
@@ -51,18 +61,26 @@ body {
   color: #555;
 }
 
-.section-hero {
-  background-color: #fdf2e9;
-  padding: 9.6rem 0;
+/* ********************************** */
+/* GENERAL RE-USABLE COMPONENTS */
+
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
 }
 
-.hero {
-  max-width: 130rem;
-  margin: 0 auto;
+.grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
   gap: 9.6rem;
+}
+
+.grid-2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid-3-cols {
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .heading-primary {
@@ -72,12 +90,6 @@ body {
   color: #333;
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
-}
-
-.hero-description {
-  font-size: 2rem;
-  line-height: 1.6;
-  margin-bottom: 4.8rem;
 }
 
 .btn:link,
@@ -117,12 +129,91 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
-.hero-img {
-  width: 100%;
-}
-
 .margin-right-sm {
   margin-right: 1.6rem;
+}
+
+/* ********************************** */
+/* HEADER */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+
+  /* We add height in order to make the header sticky later*/
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+
+.logo {
+  height: 2.2rem;
+}
+
+/* ********************************** */
+/* NAVIGATION */
+/* ********************************** */
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.nav-cta:active {
+  background-color: #cf711f;
+}
+
+/* ********************************** */
+/* HERO SECTION */
+
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 3.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 9.6rem;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+}
+
+.hero-img {
+  width: 100%;
 }
 
 .delivered-meals {
@@ -156,4 +247,17 @@ body {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+
+/* ********************************** */
+/* HOW IT WORKS SECTION*/
+/* *********************************** */
+.section-how {
+  padding: 9.8rem 0;
+  background-color: orangered;
+}
+
+.section-how div {
+  padding: 100px;
+  font-size: 50px;
 }
