--- a/CSS/general.css
+++ b/CSS/general.css
@@ -146,6 +146,7 @@ body {
   letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   background-color: #e67e22;
@@ -158,6 +159,11 @@ body {
   /* 
   transition: background-color 0.3s; */
   transition: all 0.3s;
+
+  /* Only necessary for .btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 }
 
 .btn-full:link,
@@ -182,6 +188,18 @@ body {
   background-color: #fdf2e9;
 
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn-form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn-form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
@@ -218,6 +236,11 @@ body {
   width: 3rem;
   height: 3rem;
   color: #e67e22;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.562);
 }
 
 /* HELPER CLASSES */
