--- a/CSS/general.css
+++ b/CSS/general.css
@@ -35,7 +35,9 @@ Shades:
 Accents:
 
 Greys:
-#6f6f6f 
+#888
+#767676
+#6f6f6f (Lightest grey allowed on #fff)
 #555
 #333
 
@@ -102,6 +104,10 @@ body {
 
 .grid-4-cols {
   grid-template-columns: repeat(4, 1fr);
+}
+
+.grid-5-cols {
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .grid-center-v {
