Build Tablet and Mobile Media queries 📱

--- a/CSS/general.css
+++ b/CSS/general.css
@@ -60,6 +60,7 @@ Spacing Sysytem(px)
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -67,6 +68,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+  overflow-x: hidden;
 }
 
 /* ********************************** */
@@ -236,6 +238,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.6rem;
+  line-height: 1.2;
 }
 
 .list-icon {
