--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,10 @@
   /* We add height in order to make the header sticky later*/
   height: 9.6rem;
   padding: 0 4.8rem;
+
+  /* Position for the absolutely positioned main-nav for 
+  the mobile navigation. */
+  position: relative;
 }
 
 .logo {
@@ -22,7 +26,7 @@
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 
 .main-nav-link:link,
@@ -51,6 +55,25 @@
 .main-nav-link.nav-cta:hover,
 .nav-cta:active {
   background-color: #cf711f;
+}
+
+/* Mobile Navigation */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
 
 /* ********************************** */
@@ -499,6 +522,7 @@
     ),
     url(../img/eating.jpg);
   background-size: cover;
+  background-position: center;
 }
 
 .cta-form {
