Implement mobile Navigation and Smooth Scroll

--- a/CSS/general.css
+++ b/CSS/general.css
@@ -61,6 +61,9 @@ Spacing Sysytem(px)
 html {
   font-size: 62.5%;
   overflow-x: hidden;
+
+  /* Does not work on Safari and Microsoft Edge */
+  /* scroll-behavior: smooth; */
 }
 
 body {
